# simple-data-ai-stack

./: .gitignore  README.md
data-Infrastructure/: The Hidden Problems in Data Infrastructure.md
data-agent-sdk/: .gitignore  ARCHITECTURE_DIAGRAM.md  GAP_ANALYSIS.md  Makefile  README.md  mcp_example.py  mcp_server_standalone.py  polars_pipeline_example.py  pyproject.toml  simple_example.py
data-agent-sdk/src/data_agent_sdk/: cli.py  types.py
data-agent-sdk/src/data_agent_sdk/agents/: base.py
data-agent-sdk/src/data_agent_sdk/hooks/: governance.py  lineage.py
data-agent-sdk/src/data_agent_sdk/tools/: polars_tool.py  sql.py
data-agent-sdk/src/data_agent_sdk/transport/: subprocess.py
data-agent-sdk/tests/: test_tools.py
data-ai-metrics-victoriametrics/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  docker-compose.yml  duckdb_analytics.py  llm_metrics_query.py  main.py  openai_conn.py  polars_pipeline.py  polars_pipeline_with_logs.py  pyproject.toml  requirements.txt  run_demo.sh  setup_grafana.sh  verify_setup.py
data-ai-metrics-victoriametrics/grafana/dashboards/: pipeline-observability.json
data-pipeline-security/: Readme.md
data_pipeline_orchestration/: README.md  docker-compose.override.yml  docker-compose.yml  requirements.etl.txt  start_pipeline.sh
data_pipeline_orchestration/dags/: etl_pipeline.py
data_pipeline_orchestration/scripts/: etl_pipeline.py  generate_sample_data.py  monitor.py
dataengineering-dashboard-vision/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
dataengineering-dashboard-vision/agent/: dashboard_agent.py
datalake/: .env  README.md  docker-compose.yaml
datalake/postgres_datalake/: README.md  docker-compose.yaml
ducklake-ai-platform/: .env.example  Dockerfile.marimo  README.md  docker-compose.yml  requirements.txt  start.sh  stop.sh
ducklake-ai-platform/init-scripts/: 01-init-ducklake.sql
ducklake-ai-platform/notebooks/: ducklake_demo.py
dwh-rag-framework/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
dwh-rag-framework/notebooks/: 01_snapshot.py  02_validate_kg.py  03_test_agent.py
dwh-rag-framework/pipelines/: index_job.py  snapshot_job.py  validation_job.py
dwh-rag-framework/src/: agent.py  converter.py  indexer.py  snapshot.py  validator.py
elasticsearch-vs-vector-search/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  requirements.txt  run.sh
knowledge-search-hybrid/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
knowledge-search-hybrid/config/: search_config.yaml
knowledge-search-hybrid/data/raw/: confluence_articles.csv  github_docs.csv  slack_messages.csv
knowledge-search-hybrid/scripts/: refresh.sh
knowledge-search-hybrid/src/: README.md
knowledge-search-hybrid/src/app/: __init__.py  config.py  etl.py  indexer.py  main.py  rag.py  schema.py  search.py
mcp-data-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  server.py  test.sh
mdm-polars-duckdb/: Dockerfile  Makefile  README.md  requirements.txt
n8n-data-ai-orchestration/: Data AI Orchestration.json  README.md
orchestrator-battle/: Dockerfile.cron  Dockerfile.temporal  docker-compose.yml  setup.sh
postgres-duckdb-sync/: README.md  docker-compose.yml
python-redis-streaming/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  init.sql  pyproject.toml  run.sh
python-redis-streaming/scripts/: benchmark.py  monitor.py  produce_sample.py
python-redis-streaming/src/: __init__.py  config.py  consumer.py  main.py  monitor.py  producer.py
python-redis-streaming/tests/: __init__.py  test_consumer.py  test_producer.py
read-from-everywhere-platform/: README.md  docker-compose.yml
redis-postgres-pipeline/: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml  run.sh
redis-postgres-pipeline/src/: __init__.py  cli.py  config.py  data_generator.py  pipeline.py  postgres_utils.py  redis_utils.py
redis-postgres-pipeline/tests/: __init__.py  test_data_generator.py
spark-to-polars-migration/: README.md  docker-compose.yml
(+59 files in other folders)
