[project]
name = "knowledge-search-hybrid"
version = "0.1.0"
description = "Single-container lexical + semantic search with local embeddings, Polars ETL, and RAG-style answers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "polars>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "pyyaml>=6.0.1",
    "hnswlib>=0.8.0",
    "fastembed>=0.3.1",
    "numpy>=1.26.0",
    "orjson>=3.10.0",
    "httpx>=0.27.0",
    "tantivy>=0.21.0",
    "rich>=13.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]
